fix: bridge account